# project-mekha

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/mekha/: logger.py  open_meteo.py
tests/: test_logger.py  test_open_meteo.py
