[metadata]
name = project-mekha 
version = attr: mekha.__version__
author = Sirakorn Lamyai
author_email = sirakorn.lamyai@adastragrp.com
url = https://srakrn.me/
description = Project Mekha
long_description = file: README.md
license = WTFPL 
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    mekha
package_dir =
    src
zip_safe = True
include_package_data = True

[options.packages.find]
where = src