[metadata]
name = project-mekha 
version = attr: mekha.__version__
author = Sirakorn Lamyai
author_email = sirakorn.lamyai@adastragrp.com
url = https://srakrn.me/
description = Project Mekha
license = WTFPL 
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = mekha
include_package_data = True
install_requires =
    requests

[options.packages.find]
where = src
